# apps/server/src/main/java/com/niceday/workshop/auth/dto/AuthLoginRequest.java
@@ -1,0 +1,9 @@
+package com.niceday.workshop.auth.dto;
+
+import jakarta.validation.constraints.NotBlank;
+
+public record AuthLoginRequest(
+        @NotBlank String username,
+        @NotBlank String password
+) {
+}
