# apps/server/src/main/java/com/niceday/workshop/auth/dto/AuthLoginResponse.java
@@ -1,0 +1,6 @@
+package com.niceday.workshop.auth.dto;
+
+public record AuthLoginResponse(
+        String role
+) {
+}
